fix(register): remove obsolete switchToLogin and redirect via react-router navigate